# modules-repo

ADSIMUL/: .cproject  .project
ADSIMUL/debug_make/: Makefile
ADSIMUL/lnx_make/: Makefile  Makefile.am  Makefile.in
ADSIMUL/matlab/: ADSIMUL.c
ADSIMUL/src/: ADSIMUL.c  ADSIMUL.h  ADSIMUL_functions.c  ADSIMUL_functions.h  ADSIMUL_params.h
ADSIMUL/standalone/: test_generate.c
CHANNEL_ANALYZER/: .cproject  .project
CHANNEL_ANALYZER/debug_make/: CHANNEL_ANALYZER  Makefile
CHANNEL_ANALYZER/doc/: CHANNEL_ANALYZER.doc  CHANNEL_ANALYZER.params
CHANNEL_ANALYZER/lnx_make/: Makefile  Makefile.am  Makefile.in
CHANNEL_ANALYZER/matlab/: CHANNEL_ANALYZER.c
CHANNEL_ANALYZER/src/: CHANNEL_ANALYZER.c  CHANNEL_ANALYZER.c.OLD  CHANNEL_ANALYZER.c~  (+10 more)
CIRC_BUFFER/: .cproject  .project
CPLX_FILTER/: .cproject  .project
CRC/: .cproject
DAC_JACK0/lnx_make/: Makefile  Makefile.am  Makefile.am~  Makefile.in
DAC_JACK1/: .cproject  .project
DDC/: .cproject  .project
DDC17/: .cproject  .project
DUC17/: .cproject  .project
GRAPH/: .cproject  .project
LTEturboCOD/: LTETurboCOD230919.tar  LTEturboVOD.tar
LTEturboCOD2/: .cproject  .project
MOD_QAM/: .cproject  .project
REAL_FILTER/: .cproject  .project
SCRAMBLING/: .cproject  .project
UPLINK_DEMAPPING/: .cproject  .project
UPLINK_EQUALIZER/: .cproject  .project
UPLINK_MAPPING/: .cproject  .project
UPLINK_SYNCHRO/: .cproject  .project
computeEVM/: .cproject  .project
data_source/: .project
data_source_sink/: .cproject
typetools/lnx_make/: Makefile  Makefile.am  Makefile.am~  Makefile.in
(+606 files in other folders)
